--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -3,7 +3,9 @@
     <amstore-goods-snap></amstore-goods-snap>
     <amstore-profile></amstore-profile>
 </amstore-header>
-<router-outlet></router-outlet>
+<div class="amstore-body">
+    <router-outlet></router-outlet>
+</div>
 <footer>
     <p style="text-align: center">Amerald Store, {{date.getFullYear()}} год.</p>
 </footer>
