--- a/front/src/app/styles/base.scss
+++ b/front/src/app/styles/base.scss
@@ -3,3 +3,4 @@ $grid-gutter-width: 24px;
 
 @import "bootstrap-4-grid";
 @import "../cdk/cdk.base.scss";
+@import '../shared/menu-middleware/menu-middleware.component';
