--- a/front/src/app/app.component.scss
+++ b/front/src/app/app.component.scss
@@ -13,4 +13,8 @@
     @media screen and (min-width: 1920px) {
         max-width: 1680px;
     }
+
+    .amstore-body {
+        flex-grow: 1;
+    }
 }
