--- a/front/src/app/core/header/header.component.html
+++ b/front/src/app/core/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="amstore-header-logo">
+<div class="amstore-header-logo" [routerLink]="linkToRoot">
     <img src="assets/amstore logo.svg">
     <div class="amstore-header-logo-text">
         <span class="amstore-header-logo-title">AM.STORE</span>
