--- a/front/src/app/core/profile/login/login.component.scss
+++ b/front/src/app/core/profile/login/login.component.scss
@@ -12,7 +12,7 @@
         @include get-amstore-font("headline", 30, null, null);
     }
 
-    amstore-forms-input {
+    amstore-forms-input, amstore-forms-input-password {
         width: 100%;
         margin: get-spacing(1) 0;
     }
