--- a/front/src/app/layouts/account/components/menu/menu.component.html
+++ b/front/src/app/layouts/account/components/menu/menu.component.html
@@ -3,7 +3,7 @@
     <div class="amstore-menu-list">
         <amstore-button-menu *ngFor="let item of list" [routerLink]="item.path" color='accent'
             [active]="item.path === (currentPath$ | async)">
-            <amstore-icon iconName="profile" [size]="20" color="accent"></amstore-icon>
+            <amstore-icon [iconName]="item.icon || 'profile'" [size]="20" color="accent"></amstore-icon>
             {{item.label}}
         </amstore-button-menu>
     </div>
