--- a/front/src/app/shared/filter/filter.component.html
+++ b/front/src/app/shared/filter/filter.component.html
@@ -1,4 +1,4 @@
-<amstore-panel color="primary">
+<amstore-panel [color]="color || 'primary'">
     <amstore-panel-header class="amstore-filter-header">
         Фильтры
         <amstore-button *ngIf="!isEmpty" (click)="clearFilters($event)">
