--- a/front/src/app/styles/theming-var.scss
+++ b/front/src/app/styles/theming-var.scss
@@ -14,6 +14,13 @@
             dark: #D25050,
             deep: #B83131
         ),
+        turquoise: (
+            slight: #EDF5F5,
+            light: #DEF1EF,
+            middle: #B8D4D6,
+            dark: #69928F,
+            deep: #346265
+        ),
         blue: (
             slight: #EFF6FC,
             light: #C1D9EF,
