--- a/front/src/app/cdk/buttons/default/default.component.scss
+++ b/front/src/app/cdk/buttons/default/default.component.scss
@@ -64,6 +64,10 @@
         @include amstore-button-default-color(red);
     }
 
+    &.amstore-special {
+        @include amstore-button-default-color(turquoise);
+    }
+
     &.amstore-button-default-medium {
         padding: get-spacing(1) get-spacing(4);
         border-radius: 6px;
