--- a/front/src/app/layouts/admin/components/menu/menu.component.html
+++ b/front/src/app/layouts/admin/components/menu/menu.component.html
@@ -1,7 +1,7 @@
 <div class="amstore-menu">
     <h2>Админка</h2>
     <div class="amstore-menu-list">
-        <amstore-button-menu *ngFor="let item of list" [routerLink]="item.path" color='accent'
+        <amstore-button-menu *ngFor="let item of list" [routerLink]="item.path" color='special'
             [active]="item.path === (currentPath$ | async)">
             <amstore-icon [iconName]="item.icon || 'profile'" [size]="20" color="accent"></amstore-icon>
             {{item.label}}
