--- a/front/src/app/core/profile/login/login.component.html
+++ b/front/src/app/core/profile/login/login.component.html
@@ -1,13 +1,15 @@
 <h1>Войти</h1>
 
-<amstore-forms-input color="primary" type="email" [control]="username" name="username">
-    <amstore-forms-label>Адрес почты</amstore-forms-label>
-</amstore-forms-input>
+<form>
+    <amstore-forms-input color="primary" type="email" [control]="username" name="username">
+        <amstore-forms-label>Адрес почты</amstore-forms-label>
+    </amstore-forms-input>
 
-<amstore-forms-input color="primary" type="password" [control]="password" name="password">
-    <amstore-forms-label>Пароль</amstore-forms-label>
-</amstore-forms-input>
+    <amstore-forms-input color="primary" type="password" [control]="password" name="password">
+        <amstore-forms-label>Пароль</amstore-forms-label>
+    </amstore-forms-input>
+</form>
 
 <span *ngIf="error">Неверный логин или пароль</span>
 
-<amstore-button (click)="login()" color="accent">Войти</amstore-button>
+<amstore-button (click)="login()"  color="accent">Войти</amstore-button>
