--- a/front/src/app/layouts/store/components/menu/menu.component.scss
+++ b/front/src/app/layouts/store/components/menu/menu.component.scss
@@ -40,5 +40,8 @@
         &-list {
             flex-direction: row;
         }
+        amstore-button-menu {
+            margin-bottom: 0;
+        }
     }
 }
