--- a/front/src/app/shared/card/card.mobile.scss
+++ b/front/src/app/shared/card/card.mobile.scss
@@ -39,7 +39,7 @@ $mobile-image-small: 70px + get-spacing(2);
             padding: get-spacing(2);
 
             &-wrapper {
-                padding-top: get-spacing(2);
+                padding: get-spacing(2);
                 margin: auto;
             }
 
