--- a/front/src/app/layouts/store/pages/pattern/pattern-add/pattern-add.component.html
+++ b/front/src/app/layouts/store/pages/pattern/pattern-add/pattern-add.component.html
@@ -1,2 +1,2 @@
-<amstore-button [stroked]="true" *ngIf="id" (click)="goToCard()">Назад</amstore-button>
+<amstore-button [stroked]="true" *ngIf="id">Назад</amstore-button>
 <amstore-pattern-add-card *ngIf="(asyncPattern | async); let pattern" [data]="pattern">{{pattern | json}}</amstore-pattern-add-card>
