--- a/front/src/app/layouts/store/pages/pattern/pattern-card/pattern-card.component.html
+++ b/front/src/app/layouts/store/pages/pattern/pattern-card/pattern-card.component.html
@@ -1,5 +1,5 @@
 <div class="amstore-pattern-card-actions">
-    <amstore-button [stroked]="true" (click)="getBack()">Назад</amstore-button>
+    <amstore-button [stroked]="true">Назад</amstore-button>
 </div>
 
 <amstore-pattern-card *ngIf="pattern" [data]="pattern">
