--- a/front/src/app/layouts/store/pages/pattern/patterns/patterns.component.html
+++ b/front/src/app/layouts/store/pages/pattern/patterns/patterns.component.html
@@ -1,6 +1,7 @@
-<amstore-filter (onSetFilters)="setFilter($event)" [filters]="filters"></amstore-filter>
+<amstore-filter (onSetFilters)="setFilterWithPage($event)" [filters]="filters"></amstore-filter>
 
-<amstore-paginated-page (queryEvent)="nextPage($event)" [pageCount]="pageCount">
-    <amstore-snapshot-pattern *ngFor="let item of items" [data]="item" (clickOnHeader)="navigateToChild(item.id)">
-    </amstore-snapshot-pattern>
-</amstore-paginated-page>
+<amstore-snapshot-pattern *ngFor="let item of items$ | async" [data]="item" [routerLink]="['pattern-card', item.id]">
+</amstore-snapshot-pattern>
+
+<amstore-paginator (goToPageEvent)="setFilter({page: $event})" [pageCount]="pageCount" [page]="page">
+</amstore-paginator>
