--- a/front/src/app/shared/card/profile/profile.component.html
+++ b/front/src/app/shared/card/profile/profile.component.html
@@ -17,7 +17,7 @@
             <div class="amstore-card-container-line">
                 <h3>Свойства:</h3>
                 <div class="amstore-row">
-                    <amstore-chip *ngIf="user.isStaff" color="accent">Админ</amstore-chip>
+                    <amstore-chip *ngIf="user.is_staff" color="accent">Админ</amstore-chip>
                     <amstore-chip [color]="user.person.verify ? 'accent' : 'warn'">{{user.person.verify ? 'Подтвержденный' : 'Не подтвержденный' }}</amstore-chip>
                     <amstore-chip color="primary">{{user.person.location}}</amstore-chip>
                 </div>
@@ -29,7 +29,7 @@
     <div class="amstore-card-container-line">
         <h3>Дополнительные параметры:</h3>
         <div class="amstore-row">
-            Дата регистрации: {{user.dateJoined}}
+            Дата регистрации: {{user.date_joined}}
         </div>
     </div>
 
