--- a/front/src/app/cdk/paginator/paginator.component.scss
+++ b/front/src/app/cdk/paginator/paginator.component.scss
@@ -30,6 +30,7 @@
 .amstore-paginator {
     display: flex;
     flex-direction: row;
+    justify-content: center;
 
     button {
         border: none;
