--- a/front/src/app/layouts/admin/modules/patterns/card/pattern-card.component.html
+++ b/front/src/app/layouts/admin/modules/patterns/card/pattern-card.component.html
@@ -1,7 +1,7 @@
 <div class="amstore-pattern-card-actions">
     <amstore-button [stroked]="true" (click)="getBack()">Назад</amstore-button>
     <amstore-button
-        [routerLink]="['/', 'admin', 'patterns', 'edit', id]"
+        [routerLink]="['edit']"
         [stroked]="true"
         color="accent">Изменить</amstore-button>
 </div>
