--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,5 +1,5 @@
 <amstore-header>
-    <amstore-header-admin></amstore-header-admin>
+    <amstore-header-admin *ngIf="isAdmin | async"></amstore-header-admin>
     <amstore-language></amstore-language>
     <amstore-goods-snap></amstore-goods-snap>
     <amstore-profile></amstore-profile>
