--- a/front/src/app/cdk/forms/chips-checkbox/chips-checkbox.component.html
+++ b/front/src/app/cdk/forms/chips-checkbox/chips-checkbox.component.html
@@ -2,7 +2,10 @@
 <div class="amstore-chips-checkbox-list" *ngIf="itemList">
     <ng-container *ngFor="let item of itemList;">
         <amstore-chip size="large" (click)="change(item.checked, item.item.value)" [stroked]="!item.checked" [color]="color">
-            <mat-checkbox [checked]="item.checked" [color]="color" (click)="$event.preventDefault()">
+            <mat-checkbox [checked]="item.checked"
+                          class="amstore-checkbox"
+                          [ngClass]="colorClass"
+                          (click)="$event.preventDefault()">
             </mat-checkbox>
             <span>{{item.item.label}}</span>
         </amstore-chip>
