--- a/front/src/app/layouts/admin/modules/categories/categories/categories.component.html
+++ b/front/src/app/layouts/admin/modules/categories/categories/categories.component.html
@@ -3,13 +3,17 @@
     Создать новую
 </button>
 
-<amstore-paginated-page (queryEvent)="nextPage($event)" [pageCount]="pageCount">
-    <div class="amstore-categories-container">
-        <div *ngFor="let item of items" class="amstore-categories-container-row" [routerLink]="['edit', item.id]">
-            <div class="amstore-categories-container-col-small">{{item.id}}</div>
-            <div class="amstore-categories-container-col-large">{{item.name.ru}}</div>
-            <div class="amstore-categories-container-col-large">{{item.name.en}}</div>
-            <div class="amstore-categories-container-col-large">{{item.create_date | date : 'dd.MM.YYYY hh:mm:ss'}}</div>
-        </div>
+<!--<amstore-paginated-page (queryEvent)="nextPage($event)" [pageCount]="pageCount">-->
+<!--</amstore-paginated-page>-->
+
+<div class="amstore-categories-container">
+    <div *ngFor="let item of items$ | async" class="amstore-categories-container-row" [routerLink]="['edit', item.id]">
+        <div class="amstore-categories-container-col-small">{{item.id}}</div>
+        <div class="amstore-categories-container-col-large">{{item.name.ru}}</div>
+        <div class="amstore-categories-container-col-large">{{item.name.en}}</div>
+        <div class="amstore-categories-container-col-large">{{item.create_date | date : 'dd.MM.YYYY hh:mm:ss'}}</div>
     </div>
-</amstore-paginated-page>
+</div>
+
+<amstore-paginator (goToPageEvent)="setFilter({page: $event})" [pageCount]="pageCount" [page]="page">
+</amstore-paginator>
