--- a/front/src/app/layouts/admin/modules/patterns/edit/pattern-edit.component.html
+++ b/front/src/app/layouts/admin/modules/patterns/edit/pattern-edit.component.html
@@ -1,2 +1,2 @@
-<amstore-button [stroked]="true" *ngIf="id">Назад</amstore-button>
+<amstore-button [stroked]="true" *ngIf="id" (click)="getBack()">Назад</amstore-button>
 <amstore-pattern-add-card *ngIf="(asyncPattern | async); let pattern" [data]="pattern"></amstore-pattern-add-card>
