--- a/front/src/app/layouts/admin/modules/sizes/sizes/sizes.component.html
+++ b/front/src/app/layouts/admin/modules/sizes/sizes/sizes.component.html
@@ -3,12 +3,13 @@
     Создать новую
 </button>
 
-<amstore-paginated-page (queryEvent)="nextPage($event)" [pageCount]="pageCount">
-    <div class="amstore-sizes-container">
-        <div *ngFor="let item of items" class="amstore-sizes-container-row" [routerLink]="['edit', item.id]">
-            <div class="amstore-sizes-container-col-small">{{item.id}}</div>
-            <div class="amstore-sizes-container-col-small">{{item.value}}</div>
-            <div class="amstore-sizes-container-col-large">{{item.create_date | date : 'dd.MM.YYYY hh:mm:ss'}}</div>
-        </div>
+<div class="amstore-sizes-container">
+    <div *ngFor="let item of items$ | async" class="amstore-sizes-container-row" [routerLink]="['edit', item.id]">
+        <div class="amstore-sizes-container-col-small">{{item.id}}</div>
+        <div class="amstore-sizes-container-col-small">{{item.value}}</div>
+        <div class="amstore-sizes-container-col-large">{{item.create_date | date : 'dd.MM.YYYY hh:mm:ss'}}</div>
     </div>
-</amstore-paginated-page>
+</div>
+
+<amstore-paginator (goToPageEvent)="setFilter({page: $event})" [pageCount]="pageCount" [page]="page">
+</amstore-paginator>
