--- a/front/src/app/layouts/admin/modules/patterns/card/pattern-card.component.html
+++ b/front/src/app/layouts/admin/modules/patterns/card/pattern-card.component.html
@@ -6,10 +6,8 @@
         color="accent">Изменить</amstore-button>
 </div>
 
-<amstore-pattern-send [pattern]="pattern"></amstore-pattern-send>
-
 <amstore-pattern-card *ngIf="pattern" [data]="pattern">
     <admin-pattern-cart [pattern]="pattern">
-        Добавить в корзину админа
+        Корзина админа
     </admin-pattern-cart>
 </amstore-pattern-card>
