--- a/front/src/app/layouts/admin/modules/patterns/card/pattern-card.component.scss
+++ b/front/src/app/layouts/admin/modules/patterns/card/pattern-card.component.scss
@@ -2,6 +2,8 @@
 
 .amstore-pattern-card {
     &-actions {
+        margin: 16px 0;
+
         amstore-button {
             margin: get-spacing(2);
         }
