--- a/front/src/app/styles/untils.scss
+++ b/front/src/app/styles/untils.scss
@@ -6,6 +6,12 @@
     box-shadow: 0 0 8px rgb(17 17 17 / 30%);
 }
 
+@mixin amstore-border() {
+    border-radius: 8px;
+    @include amstore-box-shadow();
+}
+
+
 @mixin mobile {
     @media screen and (max-width: 500px) {
         @content;
