--- a/front/src/app/cdk/panel/panel-basic/amstore-panel-basic.component.scss
+++ b/front/src/app/cdk/panel/panel-basic/amstore-panel-basic.component.scss
@@ -1,5 +1,5 @@
 @import "../../../styles/spacing";
-@import "../../../styles/untils";
+@import "../../../styles/utils";
 
 :host {
     display: block;
