--- a/front/src/app/core/header/header.component.scss
+++ b/front/src/app/core/header/header.component.scss
@@ -1,6 +1,6 @@
 @import '/src/app/styles/typography.scss';
 @import '/src/app/styles/spacing.scss';
-@import "/src/app/styles/untils.scss";
+@import "../../styles/utils";
 
 :host {
     display: flex;
