--- a/front/src/app/shared/card/profile/profile.component.scss
+++ b/front/src/app/shared/card/profile/profile.component.scss
@@ -1,5 +1,5 @@
 @import "/src/app/styles/spacing";
-@import "/src/app/styles/untils.scss";
+@import "../../../styles/utils";
 
 .amstore-profile-card {
     .amstore-panel-content-wrapper {
