--- a/front/src/app/shared/menu/menu.component.scss
+++ b/front/src/app/shared/menu/menu.component.scss
@@ -1,6 +1,6 @@
 @import "../../styles/spacing";
 @import "../../styles/typography";
-@import "../../styles/untils";
+@import "../../styles/utils";
 
 .amstore-menu {
     padding: get-spacing(default) 0 get-spacing(default) get-spacing(6);
