--- a/front/src/app/shared/viewer/viewer-dialog/viewer-dialog.component.html
+++ b/front/src/app/shared/viewer/viewer-dialog/viewer-dialog.component.html
@@ -2,11 +2,11 @@
     <div (click)="prevImage($event)">
         <amstore-icon iconName="left-arrow" [size]="32" [contrast]="true"></amstore-icon>
     </div>
-    <img [src]="data.images[data.index].image_full">
+    <img [outsideSrc]="data.images[data.index].image_full">
     <div (click)="nextImage($event)">
         <amstore-icon iconName="right-arrow" [size]="32" [contrast]="true"></amstore-icon>
     </div>
 </div>
 <div class="amstore-viewer-snippet-images">
-    <img *ngFor="let image of data.images; index as i" [src]="image.image_small" [class.image-active]="i === data.index" (click)="goToIndex(i, $event)">
+    <img *ngFor="let image of data.images; index as i" [outsideSrc]="image.image_small" [class.image-active]="i === data.index" (click)="goToIndex(i, $event)">
 </div>
