--- a/front/src/app/styles/global.scss
+++ b/front/src/app/styles/global.scss
@@ -6,4 +6,12 @@
     display: flex;
     flex-direction: row;
     gap: get-spacing(2);
+
+    &.right {
+        justify-content: flex-end;
+    }
+
+    &.center {
+        justify-content: center;
+    }
 }
