--- a/front/src/app/shared/card/pattern-add/pattern-add.component.html
+++ b/front/src/app/shared/card/pattern-add/pattern-add.component.html
@@ -1,10 +1,8 @@
 <div class="amstore-card-images-wrapper">
-    <div class="amstore-card-images">
-        <amstore-button class="amstore-card-edit-image-add" (click)="openImagesEdit()">Изменить <br> изображения
-        </amstore-button>
-        <img *ngFor="let image of images" [src]="image?.image?.image_small || ''" [ngStyle]="{ order: image.index }" class="amstore-card-img">
-        <img *ngFor="let image of blobImages" [src]="image?.src" [ngStyle]="{ order: image.index }" class="amstore-card-img">
-    </div>
+    <amstore-button class="amstore-card-edit-image-add" (click)="openImagesEdit()">Изменить <br> изображения
+    </amstore-button>
+
+    <amstore-blob-image-list [blobImages]="blobImages" [savedImages]="savedImages"></amstore-blob-image-list>
 </div>
 <div class="amstore-card-container">
     <div class="amstore-card-container-header">
