--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -56,6 +56,10 @@ h2 {
     margin: get-spacing(2) 0;
 }
 
+p {
+    margin: get-spacing(1) 0;
+}
+
 .amstore-text-primary {
   color: get-amstore-color(green, deep);
 }
