--- a/front/src/app/layouts/admin/modules/orders/index/index.component.html
+++ b/front/src/app/layouts/admin/modules/orders/index/index.component.html
@@ -1,10 +1,8 @@
 <!-- filters -->
 <!--<amstore-filter (onSetFilters)="setFilterWithPage($event)" [filters]="filters"></amstore-filter>-->
 
-<div *ngFor="let item of items$ | async" style="padding: 16px">
-    {{item.email}}
-    <br>
-    {{item.create_date | date : 'YYYY.MM.dd HH:mm.SS'}}
+<div *ngFor="let order of items$ | async" style="padding: 16px">
+    <amstore-snapshot-admin-order [order]="order" [routerLink]="['/', 'admin', 'orders', 'card', order.id]"></amstore-snapshot-admin-order>
 </div>
 
 <amstore-paginator (goToPageEvent)="setFilter({page: $event})" [pageCount]="pageCount" [page]="page">
