--- a/front/src/app/layouts/admin/modules/patterns/index/patterns.component.html
+++ b/front/src/app/layouts/admin/modules/patterns/index/patterns.component.html
@@ -7,7 +7,8 @@
 
 <amstore-filter (onSetFilters)="setFilterWithPage($event)" [filters]="filters" color="special"></amstore-filter>
 
-<amstore-snapshot-pattern *ngFor="let item of items$ | async" [data]="item" [routerLink]="[item.id]">
+<amstore-snapshot-pattern *ngFor="let item of items$ | async" [pattern]="item" [routerLink]="[item.id]">
+    <amstore-pattern-details-short [pattern]="item" [routerLink]="[item.id]"></amstore-pattern-details-short>
 </amstore-snapshot-pattern>
 
 <amstore-paginator (goToPageEvent)="setFilter({page: $event})" [pageCount]="pageCount" [page]="page">
