--- a/front/src/app/shared/snapshot/admin-order/snapshot-admin-order.component.html
+++ b/front/src/app/shared/snapshot/admin-order/snapshot-admin-order.component.html
@@ -7,7 +7,7 @@
     <h2 class="snapshot-order__header" [routerLink]="routerLink">Заказ №{{order.id}}</h2>
 
     <div class="snapshot-order__title">
-        <amstore-icon iconName="profile" [size]="20"></amstore-icon>
+        <amstore-icon iconName="profile" [size]="20" color="special"></amstore-icon>
         Email:
         <span class="value">
         {{order.email}}
@@ -15,14 +15,14 @@
     </div>
 
     <div class="snapshot-order__title">
-        <amstore-icon iconName="time" [size]="20"></amstore-icon>
+        <amstore-icon iconName="time" [size]="20" color="special"></amstore-icon>
         Дата заказа:
         <span class="value">
             {{order.create_date | date : 'YYYY.MM.dd HH:mm.SS'}}
         </span>
     </div>
     <div class="snapshot-order__title">
-        <amstore-icon iconName="order" [size]="20"></amstore-icon>
+        <amstore-icon iconName="order" [size]="20" color="special"></amstore-icon>
         Покупки:
         <div *ngFor="let purchase of order.purchases" class="snapshot-order__purchase">
             <span class="value">
